--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,14 @@
 .App {
   text-align: center;
+  background-color: #54a5ae;
+  padding: 2px;
+  margin: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +17,24 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-drawer{
+  background-color: aliceblue;
+  height: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.search-tag{
+  align-items: center;
+  justify-content: center;
+}
+.search-box{
+  width: 200px;
+  height: 20px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
